--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ repository = "https://github.com/SeanGeb/beanstalk-rs"
 license = "GPL-3.0-or-later"
 
 [dependencies]
+serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.9"
