--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,2 +1,6 @@
+format_code_in_doc_comments = true
+group_imports = "StdExternalCrate"
+imports_granularity = "Module"
 match_block_trailing_comma = true
 max_width = 80
+reorder_impl_items = true
