--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,15 @@ license = "GPL-3.0-or-later"
 anyhow = "1"
 bytes = "1"
 clap = { version = "4", features = ["derive"] }
+futures = "0.3.31"
 itertools = "0.11"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9.34"
 tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1.15"
 tokio-util = { version = "0.7", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json", "parking_lot"] }
+
+[dev-dependencies]
+tokio-test = "0.4.4"
